--- a/templates/contrast_stretching.html
+++ b/templates/contrast_stretching.html
@@ -69,7 +69,7 @@
                     <button type="submit">Apply Custom Stretch</button>
                 </form>
                     <button>
-                        <a href ="http://127.0.0.1:5000/details/{{ gray_image }}">
+                        <a href ="/details/{{ gray_image }}">
                         Back
                         </a>
                     </button>
